--- a/age.html
+++ b/age.html
@@ -31,7 +31,7 @@
 
         // get the user's age in years
         function get_age() {
-            var age = document.getElementById("#age");
+            var age = document.getElementById("age");
             try {
                 age_conv = parseInt(age);
             } catch (TypeError) {
