Finished select view

--- a/heads_tails/page.html
+++ b/heads_tails/page.html
@@ -15,8 +15,18 @@
 <body>
     <h1>Heads or Tails?</h1>
     <div id='select-view'>
-        <span id='heads-tile'>sdfgsdfgsdf</span>
-        <span id='tails-tile'>o86i6767i</span>
+        <div id='heads-tile' class="tiles">
+            <h3>Heads</h3>
+            <div>
+                <img src="https://i.ibb.co/6J8mRcJ/image.png" alt="image of head side of south african 5 rand coin">
+            </div>
+        </div>
+        <div id='tails-tile' class="tiles">
+            <h3>Tails</h3>
+            <div>
+                <img src="https://i.ibb.co/fDyzd3s/image.png" alt="image of tail side of south african 5 rand coin">
+            </div>
+        </div>
     </div>
     <div id='load-view'></div>
     <div id='result-view'></div>    
