Added loading view for heads/tails

--- a/heads_tails/page.html
+++ b/heads_tails/page.html
@@ -28,7 +28,9 @@
             </div>
         </div>
     </div>
-    <div id='load-view'></div>
+    <div id='load-view'>
+        <iframe src="https://giphy.com/embed/SABvdsgeZrcu4SbdA6" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+    </div>
     <div id='result-view'></div>    
 </body>
 </html>
