--- a/heads_tails/page.html
+++ b/heads_tails/page.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Heads or Tails?</h1>
+    <h1 id="title">Heads or Tails?</h1>
     <div id='select-view'>
         <div id='heads-tile' class="tiles">
             <h3>Heads</h3>
@@ -31,6 +31,7 @@
     <div id='load-view'>
         <iframe src="https://giphy.com/embed/SABvdsgeZrcu4SbdA6" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     </div>
-    <div id='result-view'></div>    
+    <div id='result-view'></div>
+    <div class="btn btn-primary tiles" type="button" id='reset'>Play Again?</div>
 </body>
 </html>
